objects/SCA_Review_History__c.object
<CustomObject><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Work: W-000026
Summary: This object stores SCA Reviews for a branch.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableLicensing>false</enableLicensing><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>Branch__c</fullName><description>Work: W-000026
Summary: Master-Detail to Branch</description><externalId>false</externalId><label>Branch</label><referenceTo>Flosum__Branch__c</referenceTo><relationshipLabel>SCA Review History</relationshipLabel><relationshipName>SCA_Review_Histories</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>MasterDetail</type><writeRequiresMasterRead>true</writeRequiresMasterRead></fields><fields><fullName>Is_SCA_Passed__c</fullName><defaultValue>false</defaultValue><description>Work: W-000026
Summary: Identifies Static Code Analysis approval status.</description><externalId>false</externalId><label>Is SCA Passed</label><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Checkbox</type></fields><fields><fullName>SCA_Integration_Status__c</fullName><description>Work: W-000026
Summary: Static Code Analysis integration review status.</description><externalId>false</externalId><label>SCA Integration Status</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value><value><fullName>Queued</fullName><default>false</default><label>Queued</label></value><value><fullName>Successful</fullName><default>false</default><label>Successful</label></value><value><fullName>Failure</fullName><default>false</default><label>Failure</label></value></valueSetDefinition></valueSet></fields><label>SCA Review History</label><nameField><displayFormat>SCA-{0000000}</displayFormat><label>SCA Review Reference</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField><pluralLabel>SCA Review Histories</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>